--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         	<div class="content_wrapper">
         		<div class="cols_2 about_me_content">
         			<h1>Gerry Bunker</h1>
-        			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+        			<div class="about_me_text">
+        				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+        			</div>
 					<div class="about_me_info">
 	        			<p>
 	        				<span class="span-title">Phone</span>
