worked on portfolio section interactions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="utf-8">        
         <meta name="author" content="Gerry Bunker">
-        <meta name="description" content="A non-exhaustive list of projects that I have created over the years">
+        <meta name="description" content="A non-exhaustive list of web projects that I have developed over the years">
         
         <!-- Mobile Stuff -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -221,251 +221,126 @@
         	</div><!-- end content wrapper -->
         </section>
 
-        <section id="" class="section">
+        <section id="my_portfolio" class="section">
         	<div class="content_wrapper">
         		<div class="row">
         			<div class="cols_100">
         				<h2>Portfolio</h2>
         				<ul>
-        					<li id="all">All Projects</li>
+        					<li id="all" class="active">All Projects</li>
         					<li id="landing_pages">Landing Pages</li>
         					<li id="microsites">Microsites</li>
         					<li id="email">Emails</li>
         				</ul>
         			</div>
-        		</div>
+        		</div><!-- end row -->
         		<div class="row">
         			<div class="cols_100">
         				<div class="row">
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        				<div class="cols_25 all">
-        					<a href="" data-toggle="" data-name="" data-target="" title="">
-        						<div class="portfolio_img">
-        							<img src="images/small-fpo.jpg" alt="">
-        						</div>
-        						<div class="portfolio_name"></div>
-        						<div class="portfolio_type"></div>
-        					</a>
-        				</div>
-        			</div>
-        			</div>
-        		</div>
-        	</div>
+                            <div class="cols_25 all">                           
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"></div>
+                                 </div>
+                                    <div class="portfolio_name">
+                                        <span>Landing page name 1</span>                  
+                                    </div>
+                                    <div class="portfolio_type"></div>                    
+                                    <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                            </div>
+                            <div class="cols_25 all">                           
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"></div>
+                                </div>
+                                    <div class="portfolio_name">
+                                        <span>Microsite name 1</span>                  
+                                    </div>
+                                    <div class="portfolio_type"></div>
+                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                            </div>
+                            <div class="cols_25 all">                           
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"></div>
+                                </div>
+                                    <div class="portfolio_name">
+                                        <span>Landing Page name 2</span>                  
+                                    </div>
+                                    <div class="portfolio_type"></div>
+                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                            </div>
+                            <div class="cols_25 all">                           
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"></div>
+                                </div>
+                                    <div class="portfolio_name">
+                                        <span>Email 1</span>                  
+                                    </div>
+                                    <div class="portfolio_type"></div>
+                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                            </div>
+                            <div class="cols_25 all">                           
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"></div>
+                                </div>
+                                    <div class="portfolio_name">
+                                        <span>Landing page name 3</span>                  
+                                    </div>
+                                    <div class="portfolio_type"></div>
+                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                            </div>
+                            <div class="cols_25 all">                           
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"></div>
+                                 </div>
+                                    <div class="portfolio_name">
+                                        <span>Landing page name 4</span>                  
+                                    </div>
+                                    <div class="portfolio_type"></div>                    
+                                    <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                            </div>
+                            <div class="cols_25 all">                           
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"></div>
+                                </div>
+                                    <div class="portfolio_name">
+                                        <span>Microsite name 2</span>                  
+                                    </div>
+                                    <div class="portfolio_type"></div>
+                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                            </div>
+                            <div class="cols_25 all">                           
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"></div>
+                                </div>
+                                    <div class="portfolio_name">
+                                        <span>Landing Page name 5</span>                  
+                                    </div>
+                                    <div class="portfolio_type"></div>
+                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                            </div>
+                            <div class="cols_25 all">                           
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"></div>
+                                </div>
+                                    <div class="portfolio_name">
+                                        <span>Email 2</span>                  
+                                    </div>
+                                    <div class="portfolio_type"></div>
+                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                            </div>
+            				<div class="cols_25 all">        					
+        						<div class="portfolio_parent">
+                                    <div class="portfolio_img"></div>
+                                </div>
+            						<div class="portfolio_name">
+                                        <span>Landing page name 6</span>                  
+                                    </div>
+            						<div class="portfolio_type"></div>
+                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+            				</div>
+            			</div>
+        			</div><!-- cols 100 -->
+        		</div><!--end row -->
+        	</div><!-- end content wrapper -->
         </section>
         
         <footer class="section">
