some late night changes to index.html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         			<li id="experience">Experience</li>
         			<li id="education">Education</li>
         			<li id="portfolio">Portfolio</li>
+                    <li id="contact">Contact Me</li>
         		</ul>
         	</div>
         </header>
