--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     <body>    
         <header>
         	<div class="content_wrapper">
-        		<ul>
-        			<li id="hello">Hello</li>
-        			<li id="skills">Skills</li>
-        			<li id="experience">Experience</li>
-        			<li id="education">Education</li>
-        			<li id="portfolio">Portfolio</li>
-                    <li id="contact">Contact Me</li>
+        		<ul id="topnav">
+        			<li id="hello"><span class="cool-link">Hello</span></li>
+        			<li id="skills"><span class="cool-link">Skills</span></li>
+        			<li id="experience"><span class="cool-link">Experience</span></li>
+        			<li id="education"><span class="cool-link">Education</span></li>
+        			<li id="portfolio"><span class="cool-link">Portfolio</span></li>
+                    <li id="contact"><span class="cool-link">Contact Me</span></li>
         		</ul>
         	</div>
         </header>
@@ -228,10 +228,10 @@
         			<div class="cols_100">
         				<h2>Portfolio</h2>
         				<ul>
-        					<li id="all" class="active">All Projects</li>
-        					<li id="landing_pages">Landing Pages</li>
-        					<li id="microsites">Microsites</li>
-        					<li id="email">Emails</li>
+        					<li id="all" class="active"><span class="cool-link">All Projects</span></li>
+        					<li id="landing_pages"><span class="cool-link">Landing Pages</span></li>
+        					<li id="microsites"><span class="cool-link">Microsites</span></li>
+        					<li id="email"><span class="cool-link">Emails</span></li>
         				</ul>
         			</div>
         		</div><!-- end row -->
@@ -343,6 +343,31 @@
         		</div><!--end row -->
         	</div><!-- end content wrapper -->
         </section>
+
+         <section id="my_contact" class="section">
+            <div class="content_wrapper">
+                <div class="row">
+                    <div class="cols_33">
+                        <div class="section_sidebar">
+                            <h2>Contact</h2>
+                            <p>Contact me if you need something. All fields are required.</p>
+                        </div>
+                    </div>
+                    <div class="cols_66">
+                        <div class="row">
+                            <div class="cols_50">
+                                <input id="name" type="text" placeholder="Name">
+                                <input id="email" type="text" placeholder="E-mail">
+                            </div>
+                            <div class="cols_50">
+                                <textarea id="message" placeholder="Message"></textarea>
+                                <input class="cta blue" type="submit" name="submit" id="submit">
+                            </div>
+                        </div>
+                    </div>                  
+                </div>
+            </div><!-- end content wrapper -->
+        </section>
         
         <footer class="section">
         	<div class="content_wrapper">
@@ -355,6 +380,7 @@
         
         <!-- Scripts -->
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="js/local.js" type="text/javascript"></script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
